--- a/package.json
+++ b/package.json
@@ -8,5 +8,28 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@prisma/client": "^6.15.0",
+    "circomlibjs": "^0.1.7",
+    "dotenv": "^17.2.1",
+    "fastify": "^5.5.0",
+    "fastify-cors": "^6.0.3",
+    "fastify-helmet": "^7.0.1",
+    "fastify-swagger": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.15.0",
+    "snarkjs": "^0.7.5",
+    "zod": "^4.1.5"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.0",
+    "eslint": "^9.34.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.6",
+    "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
+  }
 }
