--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
+    "@fastify/helmet": "^13.0.1",
+    "@fastify/rate-limit": "^10.3.0",
     "@prisma/client": "^6.15.0",
     "circomlibjs": "^0.1.7",
     "dotenv": "^17.2.1",
     "fastify": "^5.5.0",
-    "fastify-cors": "^6.0.3",
-    "fastify-helmet": "^7.0.1",
     "fastify-swagger": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.15.0",
